--- a/php/nailshcool/css/bootstrap.css
+++ b/php/nailshcool/css/bootstrap.css
@@ -1,4 +1,4 @@
-!
+/*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -75,8 +75,7 @@ body {
 
 hr {
   box-sizing: content-box;
-  height: 2px;
-  width: 
+  height: 0;
   overflow: visible;
 }
 
@@ -7575,82 +7574,6 @@ button.bg-dark:focus {
 .mx-5 {
   margin-left: 3rem !important;
 }
-.m-5 {
-  margin: 3rem !important;
-}
-
-.mt-5,
-.my-5 {
-  margin-top: 3rem !important;
-}
-
-.mr-5,
-.mx-5 {
-  margin-right: 3rem !important;
-}
-
-.mb-5,
-.my-5 {
-  margin-bottom: 3rem !important;
-}
-
-.ml-5,
-.mx-5 {
-  margin-left: 3rem !important;
-}
-/*6*/
-.m-6 {
-  margin: 4.5rem !important;
-}
-
-.mt-6,
-.my-6 {
-  margin-top: 4.5rem !important;
-}
-
-.mr-6,
-.mx-6 {
-  margin-right: 4.5rem !important;
-}
-
-.mb-6,
-.my-6 {
-  margin-bottom: 4.5rem !important;
-}
-input{
-      width: 40px;
-    }
-.ml-6,
-.mx-6 {
-  margin-left: 4.5rem !important;
-}
-/*6*/
-
-/*7*/
-.m-7 {
-  margin: 6rem !important;
-}
-
-.mt-7,
-.my-7 {
-  margin-top: 6rem !important;
-}
-
-.mr-7,
-.mx-7 {
-  margin-right: 6rem !important;
-}
-
-.mb-7,
-.my-7 {
-  margin-bottom: 6rem !important;
-}
-
-.ml-7,
-.mx-7 {
-  margin-left: 6rem !important;
-}
-/*7*/
 
 .p-0 {
   padding: 0 !important;
@@ -7795,58 +7718,6 @@ input{
 .px-5 {
   padding-left: 3rem !important;
 }
-
-/*6*/
-.p-6 {
-  padding: 4.5rem !important;
-}
-
-.pt-6,
-.py-6 {
-  padding-top: 4.5rem !important;
-}
-
-.pr-6,
-.px-6 {
-  padding-right: 4.5rem !important;
-}
-
-.pb-6,
-.py-6 {
-  padding-bottom: 4.5rem !important;
-}
-
-.pl-6,
-.px-6 {
-  padding-left: 4.5rem !important;
-}
-/*6*/
-
-/*6*/
-.p-7 {
-  padding: 6rem !important;
-}
-
-.pt-7,
-.py-7 {
-  padding-top: 6rem !important;
-}
-
-.pr-7,
-.px-7 {
-  padding-right: 6rem !important;
-}
-
-.pb-7,
-.py-7 {
-  padding-bottom: 6rem !important;
-}
-
-.pl-7,
-.px-7 {
-  padding-left: 6rem !important;
-}
-/*7*/
 
 .m-auto {
   margin: auto !important;
@@ -9156,4 +9027,4 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
-/*# sourceMappingURL=bootstrap.css.map 
+/*# sourceMappingURL=bootstrap.css.map */
